--- a/app/src/main/res/layout/video_view_activity.xml
+++ b/app/src/main/res/layout/video_view_activity.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HelloJni">
+    android:orientation="vertical"
+    tools:context=".VideoViewActivity">
 
-
-    <SurfaceView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/preview_id" />
-
-</RelativeLayout>
+        android:id="@+id/video_view_activity_list" />
+</LinearLayout>
