--- a/app/src/main/res/layout/show_album_activity.xml
+++ b/app/src/main/res/layout/show_album_activity.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".VideoViewActivity">
+    tools:context=".ShowAlbumActivity">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/video_view_activity_list" />
+        android:id="@+id/show_album_activity_list" />
 </LinearLayout>
