--- a/app/src/main/res/layout/template_video.xml
+++ b/app/src/main/res/layout/template_video.xml
@@ -3,9 +3,20 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <VideoView
-        android:id="@+id/video"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="100dp" />
+        android:orientation="horizontal"
+        android:layout_height="100dp">
+        <VideoView
+            android:id="@+id/video"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/template_video_camera"
+            android:text="カメラ" />
+    </LinearLayout>
 
 </LinearLayout>
