--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -4,20 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@android:color/background_light">
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/header_main"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/header_01"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"/>
+
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/main_activity_show_album"
-        android:text="@string/next_button_to_show_album"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/btn_01_create_album"
+        android:paddingTop="50dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/main_activity_create_album"
-        android:text="@string/next_button_to_create_album"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/btn_01_show_album"
+        android:layout_marginBottom="50dp"/>
 
 </LinearLayout>
