--- a/app/src/main/res/layout/select_album_design_activity.xml
+++ b/app/src/main/res/layout/select_album_design_activity.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CreateAlbumActivity"
-    android:background="@android:color/background_light">
+    android:background="@android:color/background_light"
+    tools:context=".SelectAlbumDesignActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -13,6 +13,21 @@
         android:src="@drawable/header_main"
         android:scaleType="centerInside"
         android:adjustViewBounds="true" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/select_album_design_01_img"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +40,8 @@
         <GridView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/create_album_activity_list"
+            android:id="@+id/select_album_design_activity_list"
             android:numColumns="2"/>
     </LinearLayout>
+
 </LinearLayout>
