--- a/app/src/main/res/layout/template_select_album_design_list.xml
+++ b/app/src/main/res/layout/template_select_album_design_list.xml
@@ -12,6 +12,11 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_weight="1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/template_video_camera"
+            android:text="カメラ" />
     </LinearLayout>
 
 </LinearLayout>
