--- a/app/src/main/res/layout/create_album_activity.xml
+++ b/app/src/main/res/layout/create_album_activity.xml
@@ -14,18 +14,5 @@
         android:scaleType="centerInside"
         android:adjustViewBounds="true" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:background="@drawable/select_album_design_01_bgi">
-        <GridView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/create_album_activity_list"
-            android:numColumns="2"/>
-    </LinearLayout>
+    <include layout="@layout/content_create_album_01"/>
 </LinearLayout>
