--- a/app/src/main/res/layout/select_album_design_activity.xml
+++ b/app/src/main/res/layout/select_album_design_activity.xml
@@ -32,11 +32,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:background="@drawable/select_album_design_01_bgi">
+        android:orientation="vertical">
         <GridView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
