--- a/app/src/main/res/layout/template_select_album_design_list.xml
+++ b/app/src/main/res/layout/template_select_album_design_list.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:orientation="horizontal"
-        android:layout_height="100dp">
-        <VideoView
-            android:id="@+id/video"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="1"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:id="@+id/template_video_camera"
-            android:text="カメラ" />
-    </LinearLayout>
+        android:src="@drawable/design_01"
+        android:background="@drawable/left"
+        android:padding="10dp"
+        android:layout_height="150dp"/>
 
 </LinearLayout>
