--- a/app/src/main/res/layout/create_album_activity.xml
+++ b/app/src/main/res/layout/create_album_activity.xml
@@ -20,47 +20,48 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_weight="3"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
                 android:id="@+id/content_create_album_layout_01">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/camera"
-                    android:scaleType="centerInside"/>
             </LinearLayout>
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:id="@+id/content_create_album_layout_02">
 
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="3"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_03">
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_04">
                 <TextView
                     android:id="@+id/template_create_album_list_image_04"
@@ -73,14 +74,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="3"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
             <LinearLayout
                 android:layout_width="200dp"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
                 android:id="@+id/content_create_album_layout_05">
             </LinearLayout>
 
@@ -88,7 +91,8 @@
                 android:layout_width="200dp"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_06">
             </LinearLayout>
         </LinearLayout>
