5つめのカメラを押したら動画撮影になる

--- a/app/src/main/res/layout/create_album_activity.xml
+++ b/app/src/main/res/layout/create_album_activity.xml
@@ -63,11 +63,10 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_04">
-                <TextView
+                <ImageView
                     android:id="@+id/template_create_album_list_image_04"
                     android:layout_width="0dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="hogehoge"
+                    android:src="@drawable/create_album_comment"
                     android:layout_height="100dp"
                     android:layout_weight="1"/>
             </LinearLayout>
