--- a/app/src/main/res/layout/create_album_activity.xml
+++ b/app/src/main/res/layout/create_album_activity.xml
@@ -37,7 +37,7 @@
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_02">
 
             </LinearLayout>
@@ -49,26 +49,25 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="250dp"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_03">
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="10dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
                 android:id="@+id/content_create_album_layout_04">
                 <ImageView
                     android:id="@+id/template_create_album_list_image_04"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:src="@drawable/create_album_comment"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"/>
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="0dp"
+                    android:scaleType="fitCenter"
+                    />
             </LinearLayout>
         </LinearLayout>
 
