リファクタしてみた

--- a/app/src/main/res/layout/create_album_activity.xml
+++ b/app/src/main/res/layout/create_album_activity.xml
@@ -3,97 +3,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".CreateAlbumActivity"
     android:background="@android:color/background_light">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/header_main"
-        android:scaleType="centerInside"
-        android:adjustViewBounds="true" />
+    <include layout="@layout/title_bar" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:background="@drawable/create_album_bgi"
-        android:layout_height="match_parent">
+        android:paddingTop="0dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <android.support.percent.PercentRelativeLayout
             android:layout_weight="3"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:id="@+id/content_create_album_layout_01">
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:id="@+id/content_create_album_layout_02">
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="3"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-            <LinearLayout
-                android:layout_width="250dp"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
-                android:layout_height="match_parent"
-                android:id="@+id/content_create_album_layout_03">
-            </LinearLayout>
-            <LinearLayout
+            <RelativeLayout
+                app:layout_widthPercent="40%"
+                android:id="@+id/content_create_album_layout_01"
                 android:layout_width="wrap_content"
-                android:orientation="horizontal"
+                android:padding="5dp"
+                android:layout_height="match_parent"/>
+            <RelativeLayout
+                android:id="@+id/content_create_album_layout_02"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/content_create_album_layout_04">
+                android:padding="5dp"
+                app:layout_marginLeftPercent="40%"
+                app:layout_widthPercent="60%" />
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:layout_weight="3"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <RelativeLayout
+                app:layout_widthPercent="70%"
+                android:id="@+id/content_create_album_layout_03"
+                android:padding="5dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content" />
+            <RelativeLayout
+                android:id="@+id/content_create_album_layout_04"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="5dp"
+                app:layout_marginLeftPercent="70%"
+                app:layout_widthPercent="30%">
                 <ImageView
                     android:id="@+id/template_create_album_list_image_04"
                     android:layout_width="match_parent"
                     android:src="@drawable/create_album_comment"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="0dp"
-                    android:scaleType="fitCenter"
-                    />
-            </LinearLayout>
-        </LinearLayout>
+                    android:scaleType="fitCenter"/>
+            </RelativeLayout>
+        </android.support.percent.PercentRelativeLayout>
 
-        <LinearLayout
+        <android.support.percent.PercentRelativeLayout
             android:layout_weight="3"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp">
-            <LinearLayout
-                android:layout_width="200dp"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
+            <RelativeLayout
+                app:layout_widthPercent="50%"
+                android:id="@+id/content_create_album_layout_05"
+                android:padding="5dp"
                 android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:id="@+id/content_create_album_layout_05">
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="200dp"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
+                android:layout_width="wrap_content" />
+            <RelativeLayout
+                app:layout_marginLeftPercent="50%"
+                app:layout_widthPercent="50%"
+                android:id="@+id/content_create_album_layout_06"
+                android:padding="5dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:id="@+id/content_create_album_layout_06">
-            </LinearLayout>
-        </LinearLayout>
+                android:layout_width="wrap_content" />
+        </android.support.percent.PercentRelativeLayout>
 
     </LinearLayout>
 </LinearLayout>
