--- a/app/src/main/res/layout/select_album_design_activity.xml
+++ b/app/src/main/res/layout/select_album_design_activity.xml
@@ -4,15 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/background_light"
     tools:context=".SelectAlbumDesignActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/header_main"
-        android:scaleType="centerInside"
-        android:adjustViewBounds="true" />
+    <include layout="@layout/title_bar" />
 
     <LinearLayout
         android:layout_width="wrap_content"
